# fastapi_ai_project

./: pyproject.toml
fastapi_project/: app.py
tests/: test_app.py
